visual bug fixes: navbar menus stay open on hover, Evidence logo resize, dashboard tables aligned correctly in Safari (#9986)
* make navbar menus stay open on hover and fix mobile image link

* fix dashboard table width issue on safari

--- a/services/QuillLMS/app/assets/stylesheets/shared/navbar.scss
+++ b/services/QuillLMS/app/assets/stylesheets/shared/navbar.scss
@@ -511,6 +511,8 @@ nav.q-navbar-home {
 .navbar-tooltip-trigger {
   cursor: pointer;
   position: relative;
+  margin-bottom: -40px;
+  padding-bottom: 40px;
   span {
     color: #fff;
   }
